fix(thrift): validation error handling enhancements, replaced FluentIterable with Java 8